--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
                         <h4>Github</h4>
                     </a>
                 </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <a href="https://telfar-order-confirmation.vercel.app/">
+                        <img src="Telfar Order.png" alt="telfar_promo">
+                    </a> 
+                    <h2>Telfar Order Confirmation Email</h2>
+                    <p>HTML | CSS</p>
+                    <a href="https://github.com/nadia9318/telfar_order_confirmation">
+                        <h4>Github</h4>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
