--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                 <h1>Skills</h1>
                 <p>HTML5 | CSS3 | SAAS | JavaScript</p>
+                <p>Hubspot - Email Marketing Certified - Nov2021</p>
 
                 </div>
             </div>
@@ -109,6 +110,16 @@
                     <h2>Telfar Order Confirmation Email</h2>
                     <p>HTML | CSS</p>
                     <a href="https://github.com/nadia9318/telfar_order_confirmation">
+                        <h4>Github</h4>
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <a href="https://countdown-landing-page-mm.vercel.app/">
+                        <img src="MM Landing Page.png" alt="MM_landing_page">
+                    </a> 
+                    <h2>Landing Page</h2>
+                    <p>HTML | CSS | JavaScript</p>
+                    <a href="https://github.com/nadia9318/Countdown_Landing_Page_MM">
                         <h4>Github</h4>
                     </a>
                 </div>
